--- a/mail/templates/pixelegg/app.css
+++ b/mail/templates/pixelegg/app.css
@@ -1004,7 +1004,7 @@ div#mail-index_nm.splitter-pane {
   min-width: 3.7em !important;
 }
 .previewWrapper .firstColumnTitle {
-  width: 3em;
+  max-width: 4em;
   text-align: end;
 }
 .mailPreviewHeaders et2-select-email::part(control) {
